@@ -12,9 +12,9 @@ import br.ifrn.edu.sisconf.repository.OrderRepository;
 import br.ifrn.edu.sisconf.repository.OrdersGroupRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
-import java.time.LocalDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -30,24 +30,57 @@ public class OrdersGroupService {
 
     public OrdersGroupResponseDTO save(OrdersGroupRequestDTO ordersGroupRequestDTO) {
         OrdersGroup ordersGroup = ordersGroupMapper.toEntity(ordersGroupRequestDTO);
+        setOrdersToOrdersGroup(ordersGroupRequestDTO, ordersGroup);
+        ordersGroup.setCurrentStatus(OrdersGroupStatus.DELIVERED);
+
+        return ordersGroupMapper.toResponseDTO(ordersGroupRepository.save(ordersGroup));
+    }
+
+    public List<OrdersGroupResponseDTO> findAll() {
+        return ordersGroupRepository.findAll().stream().map(ordersGroupMapper::toResponseDTO).toList();
+    }
+
+    public OrdersGroupResponseDTO findById(Long id) {
+        OrdersGroup ordersGroup = ordersGroupRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException(String.format("Grupo de id %d não encontrado", id)));
+        return ordersGroupMapper.toResponseDTO(ordersGroup);
+    }
+
+    @Transactional
+    public OrdersGroupResponseDTO update(Long id,OrdersGroupRequestDTO ordersGroupRequestDTO) {
+       OrdersGroup ordersGroup = ordersGroupRepository.findById(id)
+               .orElseThrow(() -> new ResourceNotFoundException(String.format("Grupo de id %d não encontrado", id)));
+
+       setOrdersToOrdersGroup(ordersGroupRequestDTO, ordersGroup);
+       ordersGroup = ordersGroupMapper.updateOrdersGroup(ordersGroupRequestDTO, ordersGroup);
+       return ordersGroupMapper.toResponseDTO(ordersGroupRepository.save(ordersGroup));
+    }
+
+    private void setOrdersToOrdersGroup(OrdersGroupRequestDTO ordersGroupRequestDTO, OrdersGroup ordersGroup) {
         List<Order> orders = ordersGroupRequestDTO.getOrdersIds().stream()
                 .map(orderId -> orderRepository.findById(orderId)
                         .orElseThrow(() -> new ResourceNotFoundException(String.format("Pedido de id %d não encontrado", orderId))))
-                .toList();
+                .collect(Collectors.toList());
 
         if (orders.isEmpty()) {
             throw new BusinessException("É necessário ao menos um pedido para criar um grupo");
         }
 
-        BigDecimal total = BigDecimal.ZERO;
-        for (Order order : orders) {
-            order.setOrdersGroup(ordersGroup);
-            total = total.add(order.getTotalPrice());
-        }
-        ordersGroup.setOrders(orders);
-        ordersGroup.setTotalPrice(total);
-        ordersGroup.setCurrentStatus(OrdersGroupStatus.DELIVERED);
+        BigDecimal total = orders.stream()
+                .map(Order::getTotalPrice)
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
 
-        return ordersGroupMapper.toResponseDTO(ordersGroupRepository.save(ordersGroup));
+        orders.forEach(order -> order.setOrdersGroup(ordersGroup));
+
+        ordersGroup.getOrders().clear();
+        ordersGroup.getOrders().addAll(orders);
+        ordersGroup.setTotalPrice(total);
+    }
+
+    public void delete(Long id) {
+        if (!ordersGroupRepository.existsById(id)) {
+            throw new ResourceNotFoundException(String.format("Grupo de id %d não encontrado", id));
+        }
+        ordersGroupRepository.deleteById(id);
     }
 }
